fixed about me overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,7 @@
   padding-top: 100px;
 }
 
+
 .body {
     background-color: black;
 }
@@ -29,8 +30,11 @@
 #headShot {
   border-radius: 50%;
   width: 300px;
-  height: auto; 
+  height: auto;
+  
+ 
 }
+
 
 /* Tooltip container */
 .tooltip {
@@ -61,6 +65,7 @@
   position: absolute;
   z-index: 1;
 }
+
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
@@ -152,5 +157,23 @@ body {
       max-width: 700px;
       position: fixed;  
       z-index: 99 !important;  
+  }
+
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    width: 120px;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
   }
 }
